# severino-edu-mcp

./: .cordon-checks-report.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/severino_edu_mcp/: __init__.py  __main__.py  cli.py  education.py  server.py
tests/: test_education.py  test_server.py
