[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "severino-edu-mcp"
description = "MCP server for a Georgia Tech / education Obsidian vault — courses, course notes, and assignments. The education-profile consumer of vault-engine."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Joseph Severino", email = "github@jseverino.com" }]
keywords = ["mcp", "obsidian", "education", "vault", "local-first"]
dependencies = [
    "mcp>=1.27",
    # the shared engine, import package `vault_engine`. Path source below for this
    # personal install; on PyPI as severino-vault-engine for outside consumers.
    "severino-vault-engine>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
severino-edu-mcp = "severino_edu_mcp.server:run"

[project.urls]
Homepage = "https://github.com/joeseverino/severino-edu-mcp"
Issues = "https://github.com/joeseverino/severino-edu-mcp/issues"

[tool.uv.sources]
# severino-vault-engine is the sibling repo in Assets/. Path source for this
# personal install; outside consumers get it from PyPI by version.
severino-vault-engine = { path = "../vault-engine" }

[tool.hatch.build.targets.wheel]
packages = ["src/severino_edu_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
